logs/dag_id=spotify_data_pipeline/run_id=manual__2024-05-11T151627.118946+0000/task_id=postgres_operator/attempt=1.log
[2024-05-11T15:17:05.736+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_data_pipeline.postgres_operator manual__2024-05-11T15:16:27.118946+00:00 [queued]>
[2024-05-11T15:17:05.757+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_data_pipeline.postgres_operator manual__2024-05-11T15:16:27.118946+00:00 [queued]>
[2024-05-11T15:17:05.758+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 2
[2024-05-11T15:17:05.797+0000] {taskinstance.py:2217} INFO - Executing <Task(PostgresOperator): postgres_operator> on 2024-05-11 15:16:27.118946+00:00
[2024-05-11T15:17:05.817+0000] {standard_task_runner.py:60} INFO - Started process 1754 to run task
[2024-05-11T15:17:05.824+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'spotify_data_pipeline', 'postgres_operator', 'manual__2024-05-11T15:16:27.118946+00:00', '--job-id', '780', '--raw', '--subdir', 'DAGS_FOLDER/main15.py', '--cfg-path', '/tmp/tmplf5ws3br']
[2024-05-11T15:17:05.832+0000] {standard_task_runner.py:88} INFO - Job 780: Subtask postgres_operator
[2024-05-11T15:17:06.070+0000] {task_command.py:423} INFO - Running <TaskInstance: spotify_data_pipeline.postgres_operator manual__2024-05-11T15:16:27.118946+00:00 [running]> on host 87b4d1457810
[2024-05-11T15:17:07.202+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_data_pipeline' AIRFLOW_CTX_TASK_ID='postgres_operator' AIRFLOW_CTX_EXECUTION_DATE='2024-05-11T15:16:27.118946+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-11T15:16:27.118946+00:00'
[2024-05-11T15:17:07.206+0000] {sql.py:276} INFO - Executing: 
    create table if not exists songs (
        "Index" SERIAL,
        "Track ID" VARCHAR(255) PRIMARY KEY,
        "Track Name" VARCHAR(255);
    
[2024-05-11T15:17:07.268+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-05-11T15:17:07.360+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-05-11T15:17:07.486+0000] {sql.py:457} INFO - Running statement: 
    create table if not exists songs (
        "Index" SERIAL,
        "Track ID" VARCHAR(255) PRIMARY KEY,
        "Track Name" VARCHAR(255);
    , parameters: None
[2024-05-11T15:17:07.501+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 5:         "Track Name" VARCHAR(255);
                                         ^

[2024-05-11T15:17:07.552+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_data_pipeline, task_id=postgres_operator, execution_date=20240511T151627, start_date=20240511T151705, end_date=20240511T151707
[2024-05-11T15:17:07.622+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 780 for task postgres_operator (syntax error at or near ";"
LINE 5:         "Track Name" VARCHAR(255);
                                         ^
; 1754)
[2024-05-11T15:17:07.696+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-05-11T15:17:07.823+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
